# todolist

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose-ci.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: deploy.yaml
bot/: admin.py  models.py  serializers.py  urls.py  views.py
bot/management/commands/: runbot.py
bot/migrations/: 0001_initial.py  0002_alter_tguser_verification_code.py  0003_alter_tguser_options.py
bot/tg/: client.py  dc.py
core/: admin.py  fields.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_remove_user_age.py  0003_alter_user_email.py
goals/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
goals/migrations/: 0001_initial.py  0002_goal_alter_goalcategory_created_and_more.py  0003_board_goalcategory_board_boardparticipant.py  0004_create_new_objects.py  0005_alter_goalcategory_board.py
tests/: conftest.py  factories.py  fixtures.py
tests/core/: login_test.py  profile_test.py  signup_test.py
tests/goals/: board_test.py  category_test.py  goal_test.py
todolist/: settings.py  urls.py
