[tool.poetry]
name = "todolist"
version = "0.1.0"
description = ""
authors = ["venediktova-kate <venediktova.kat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.0.1"
django-environ = "^0.10.0"
psycopg2-binary = "^2.9.6"
envparse = "^0.2.0"
python-dotenv = "^1.0.0"
djangorestframework = "^3.14.0"
social-auth-app-django = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
