[tool.poetry]
name = "todolist"
version = "0.1.0"
description = ""
authors = ["venediktova-kate <venediktova.kat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.0.1"
django-environ = "^0.10.0"
psycopg2-binary = "^2.9.6"
envparse = "^0.2.0"
python-dotenv = "^1.0.0"
djangorestframework = "^3.14.0"
social-auth-app-django = "^5.2.0"
django-filter = "^23.2"
pydantic = "^2.0.3"
requests = "^2.31.0"
django-commands = "^0.7"
pytest-django = "^4.5.2"
pytest-factoryboy = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = 'todolist.settings'
python_files = [
    'tests.py',
    'test_*.py',
    '*_tests.py'
]
